# templatectl

./: .gitignore  Cargo.toml  LICENSE  README.md  ci_build.sh  local_build.sh  package  release.toml
.github/workflows/: build_master.yml  release.yml
src/: cli.yaml  file.rs  main.rs
src/models/: mod.rs  template_objects.rs
