[package]
name = "templatectl"
version = "0.1.5"
authors = ["Peter Grace <pete.grace@gmail.com>"]
license = "MIT"
repository = "https://github.com/PeterGrace/templatectl"
description = "template metadata file manager for reMarkable 2 tablets"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
auditable = "0.1.0"
serde = { version = "1.0.119", features = [ "derive"]}
serde_json = "1.0.61"
log = "0.4.13"
env_logger = "0.8.2"
clap = { version = "3.0.0-beta.2", features = ["yaml"]}
regex = "1.4.3"
hex = "0.4.2"
snailquote = "0.3.0"

[build-dependencies]
auditable-build = "0.1.0"
